--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "supabase": "^1.36.7",
+    "supabase-cli": "^0.0.21",
     "typescript": "4.9.4"
   }
 }
