--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.2.1",
     "encoding": "^0.1.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "faker": "^6.6.6",
     "next": "13.1.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.0.0-beta.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "supabase": "^1.36.7",
     "supabase-cli": "^0.0.21",
