--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.10",
+    "@mui/material": "^5.11.16",
+    "@mui/x-date-pickers": "^6.0.4",
     "@next/font": "13.1.4",
     "@supabase/supabase-js": "^2.4.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "encoding": "^0.1.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
@@ -34,6 +36,7 @@
     "react-dom": "18.2.0",
     "supabase": "^1.36.7",
     "supabase-cli": "^0.0.21",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "use-file-picker": "^1.6.1"
   }
 }
