--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "^13.3.1",
     "faker": "^6.6.6",
+    "framer-motion": "^10.12.10",
     "luxon": "^3.3.0",
     "next": "^13.4.1",
     "perf_hooks": "^0.0.1",
