--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/devtools": "^4.3.1",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.16",
@@ -45,6 +46,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-data-grid": "^7.0.0-beta.27",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "supabase-cli": "^0.0.21",
     "typescript": "^5.0.4",
     "use-file-picker": "^1.6.1"
