--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.15.11",
+    "@mui/x-data-grid": "^7.1.0",
     "@mui/x-date-pickers": "^6.19.5",
     "@next/font": "13.1.4",
     "@next/mdx": "^13.4.1",
