--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "18.0.10",
+    "@vercel/postgres": "^0.7.2",
     "ai": "^3.0.12",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
