--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/x-date-pickers": "^6.19.5",
     "@next/font": "13.1.4",
     "@next/mdx": "^13.4.1",
+    "@nivo/bar": "^0.85.1",
     "@supabase/auth-helpers-nextjs": "^0.7.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/ssr": "^0.1.0",
